Add register/login + update errors + init config data
