# infrastructure/api/openapi.yaml
@@ -19,7 +19,7 @@ paths:
       description: generate JWT
       operationId: login
       requestBody:
-        description: Credentials for authentification
+        description: Retrieve token for user
         content:
           application/json:
             schema:
@@ -38,6 +38,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDTO'
+
+
+  /auth/registration:
+    post:
+      tags:
+        - auth
+      summary: register a new user as customer user
+      description: generate JWT
+      operationId: registration
+      requestBody:
+        description: Register a new user
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+        required: true
+      responses:
+        200:
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        401:
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDTO'
+
 
   /pets:
     get:
@@ -95,19 +125,11 @@ components:
         age:
           type: integer
 
-
-    TagDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-        name:
-          type: string
-          example: fantasy
-
     AuthRequest:
       type: object
+      required:
+        - password
+        - email
       properties:
         email:
           type: string
@@ -115,6 +137,7 @@ components:
           maxLength: 255
         password:
           type: string
+          pattern: '^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$'
 
     AuthResponse:
       type: object
@@ -124,6 +147,19 @@ components:
           format: email
         token:
           type: string
+
+    UserDTO:
+      type: object
+      required:
+        - id
+        - email
+      properties:
+        id:
+          type: integer
+          format: int64
+        email:
+          type: string
+          format: email
 
     ErrorDTO:
       type: object
